# jsonresume.hs

./: jsonresume.cabal  stack.yaml
src/Data/: JSONResume.hs
test/: resume.json
test/Data/: JSONResumeSpec.hs
