name:                jsonresume
version:             0.1.0.1
synopsis:            Parser and datatypes for the JSON Resume format
description:         The JSON Resume initiative (<http://jsonresume.org>) provides
                     a standard format for representing resumes/CVs in JSON
                     form.  This library encodes that standard in Haskell
                     datatypes, and provides a parser to read a CV in the JSON
                     Resume format.
homepage:            https://github.com/dpwright/jsonresume.hs
license:             BSD3
license-file:        LICENSE
author:              Daniel P. Wright
maintainer:          dani@dpwright.com
copyright:           (c) 2014 Daniel P. Wright
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.JSONResume
  build-depends:       base >=4.7 && <5
                     , aeson
                     , text
                     , time
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite jsonresume-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jsonresume
                     , bytestring
                     , aeson
                     , here
                     , time
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010